Adding more workspace methods
